# cpp_project_template

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  BasePropertySheet.props  CMakeLists.txt  CMakePresets.json  CMakePresetsBase.json  vcpkg-configuration.json  vcpkg.json
.github/: install_clang.yml
.github/workflows/: ci.yml  create_release.yml  install_clang.yml  update_version.yml
cmake/: Config.cmake.in  code_analysis.cmake  compiler_flags.cmake  debugging_utils.cmake  dynamic_library_link.cmake  global_setup.cmake  installation.cmake  target_helpers.cmake  version_details.cmake
src/: CMakeLists.txt  main.cpp
src/apps/: CMakeLists.txt
src/apps/cpp_app/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/core/: CMakeLists.txt  logger.cpp
src/libs/core/core/: logger.hpp
src/tests/unit_tests/: CMakeLists.txt  core_tests.cpp  unit_tests_main.cpp
vcpkg_scripts/overlay/ffmpeg_/: portfile.cmake
vcpkg_scripts/overlay/octomap/: portfile.cmake
vcpkg_scripts/toolchains/: clang-16-toolchain-aarch64.cmake  clang-toolchain.cmake  gcc-13-toolchain.cmake
vcpkg_scripts/triplets/: aarch64-linux-clang-15.cmake  x64-linux-clang.cmake  x64-linux-gcc-13.cmake
